combine sourcemaps correctly

--- a/test/fixtures/basic.css
+++ b/test/fixtures/basic.css
@@ -1,4 +1,5 @@
 p {
-  -webkit-transition: all 1s ease;
-          transition: all 1s ease;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
