Update dependencies and tests
Updated to the latest versions of the dependencies and also updated the tests to
use a css property that generates some prefixes since flexbox no longer needs
prefixes for the default browserslist config.

--- a/test/fixtures/basic.css
+++ b/test/fixtures/basic.css
@@ -1,5 +1,5 @@
 p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
